--- a/categorie.html
+++ b/categorie.html
@@ -43,7 +43,7 @@
                 <!-- Catégorie Dessert -->
                 <div class="col-md-4 mb-4">
                     <div class="card shadow-lg border-0 rounded">
-                        <a href="categorie/desserts.html">
+                        <a href="./categorie/desert.html">
                             <img src="./img/desert.avif" class="card-img-top rounded-top" alt="Desserts">
                             <div class="card-body">
                                 <h5 class="card-title">Desserts</h5>
@@ -56,7 +56,7 @@
                 <!-- Catégorie Plats principaux -->
                 <div class="col-md-4 mb-4">
                     <div class="card shadow-lg border-0 rounded">
-                        <a href="categorie/plats_principaux.html">
+                        <a href="./categorie/platsPricipale.html">
                             <img src="./img/plat_princibal.jpg" class="card-img-top rounded-top" alt="Plats principaux">
                             <div class="card-body">
                                 <h5 class="card-title">Plats Principaux</h5>
@@ -69,7 +69,7 @@
                 <!-- Catégorie Entrées -->
                 <div class="col-md-4 mb-4">
                     <div class="card shadow-lg border-0 rounded">
-                        <a href="categorie/entrees.html">
+                        <a href="./categorie/enter.html">
                             <img src="./img/entrer.jpg" class="card-img-top rounded-top" alt="Entrées">
                             <div class="card-body">
                                 <h5 class="card-title">Entrées</h5>
