--- a/categorie/desert.html
+++ b/categorie/desert.html
@@ -14,11 +14,11 @@
     <div class="sidebar">
         <h2>Tom Tasty</h2>
         <ul>
-            <li class="active"><a href="index.html">Accueil</a></li>
-            <li><a href="toutesRecette.html">Toutes les recettes</a></li>
-            <li><a href="categorie.html">Catégories</a></li>
-            <li><a href="html/apropos.html">À propos</a></li>
-            <li><a href="html/contact.html">Contact</a></li>
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="../toutesRecette.html">Toutes les recettes</a></li>
+            <li class="active"><a href="../categorie.html">Catégories</a></li>
+            <li><a href="../html/apropos.html">À propos</a></li>
+            <li><a href="../html/contact.html">Contact</a></li>
         </ul>
         <div class="delivery">
             <p>Create Your Recipe</p>
@@ -28,9 +28,9 @@
 
     <div class="main">
         <header class="fade-in-slide-up text-center mb-4">
-            <a href="index.html"><img class="iconepricibale" src="./img/chef (1).png" alt="Logo du site"></a>
-            <img src="./img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
-            <h1 class="fade-in-slide-up">Bienvenue sur Tasty Tom !</h1>
+            <a href="index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
+            <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
+            <h1 class="fade-in-slide-up">Desserts</h1>
             <p class="fade-in-slide-up">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
             <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
                 class="form-control mb-3 w-50 mx-auto fade-in-slide-up" name="query" type="text">
@@ -44,8 +44,8 @@
                 <!-- Card 1 -->
                 <div class="col-md-4 mb-4">
                     <div class="card shadow-lg border-0 rounded">
-                        <a href="recettes/recette1.html">
-                            <img src="./img/cookies.jpg" class="card-img-top rounded-top" alt="Cookies au chocolat">
+                        <a href="../recettes/recette1.html">
+                            <img src="../img/cookies.jpg" class="card-img-top rounded-top" alt="Cookies au chocolat">
                             <div class="card-body">
                                 <h5 class="card-title">Cookies au chocolat</h5>
                                 <p class="card-text">Des cookies fondants et riches en chocolat noir et pépites
@@ -57,8 +57,8 @@
                 <!-- Card 2 -->
                 <div class="col-md-4 mb-4">
                     <div class="card shadow-lg border-0 rounded">
-                        <a href="recettes/recette2.html">
-                            <img src="./img/gateaux_cafe.jpg" class="card-img-top rounded-top" alt="Gâteau au café">
+                        <a href="../recettes/recette2.html">
+                            <img src="../img/gateaux_cafe.jpg" class="card-img-top rounded-top" alt="Gâteau au café">
                             <div class="card-body">
                                 <h5 class="card-title">Gâteau au café et aux noix</h5>
                                 <p class="card-text">Un délicieux gâteau au café, rehaussé de noix croquantes.</p>
@@ -69,8 +69,8 @@
                 <!-- Card 3 -->
                 <div class="col-md-4 mb-4">
                     <div class="card shadow-lg border-0 rounded">
-                        <a href="recettes/recette3.html">
-                            <img src="./img/cuckake_peche.jpeg" class="card-img-top rounded-top"
+                        <a href="../recettes/recette3.html">
+                            <img src="../img/cuckake_peche.jpeg" class="card-img-top rounded-top"
                                 alt="Cupcakes à la pêche">
                             <div class="card-body">
                                 <h5 class="card-title">Cupcakes à la pêche</h5>
@@ -85,18 +85,18 @@
         <footer class="text-center py-4 bg-dark text-white">
             <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="./html/contact.html" class="text-white">Contact</a></li>
-                <li class="list-inline-item"><a href="./html/apropos.html" class="text-white">À propos</a></li>
+                <li class="list-inline-item"><a href="../html/contact.html" class="text-white">Contact</a></li>
+                <li class="list-inline-item"><a href="../html/apropos.html" class="text-white">À propos</a></li>
                 <li class="list-inline-item">
                     <a href="https://www.instagram.com/tomi_cunningham/" target="_blank">
-                        <img src="./img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
+                        <img src="../img/instagram.png" alt="Instagram" style="width: 24px; height: 24px;">
                     </a>
                 </li>
             </ul>
         </footer>
     </div>
 
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
