--- a/recettes/recette2.html
+++ b/recettes/recette2.html
@@ -31,6 +31,14 @@
                 <a href="../html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
                     aria-selected="false">Contact</a>
             </li>
+            <li class="nav-item" role="presentation">
+                <a href="../categorie.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                    aria-selected="false">Categorie</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="../creationrecette/creation.html" class="nav-link rounded-5 text-light" id="contact-tab2"
+                    role="tab" aria-selected="false">Creation</a>
+            </li>
         </ul>
     </header>
 
