--- a/recettes/recette3.html
+++ b/recettes/recette3.html
@@ -15,8 +15,7 @@
     <header>
         <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
         <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
-        <h1>Cupcakes à la pêche et au crumble de noisettes
-        </h1>
+        <h1>Gâteau au café et aux noix</h1>
         <p>Découvrez des recettes faciles et rapides pour tous les goûts !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
             class="form-control mb-3 w-50 mx-auto " name="query" type="text">
@@ -32,6 +31,14 @@
             <li class="nav-item" role="presentation">
                 <a href="../html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
                     aria-selected="false">Contact</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="../categorie.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                    aria-selected="false">Categorie</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="../creationrecette/creation.html" class="nav-link rounded-5 text-light" id="contact-tab2"
+                    role="tab" aria-selected="false">Creation</a>
             </li>
         </ul>
     </header>
