--- a/toutesRecette.html
+++ b/toutesRecette.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mb-4">
+                <!-- <div class="col-md-4 mb-4">
                     <div class="card shadow-lg border-0 rounded">
                         <a href="recettes/recette4.html">
                             <img src="./img/tiramisu.jpg" class="card-img-top rounded-top" alt="Tiramisu">
@@ -114,7 +114,7 @@
                             </div>
                         </a>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </section>
