--- a/html/contact.html
+++ b/html/contact.html
@@ -36,20 +36,23 @@
 
         <section class="container mb-5">
             <h2>Formulaire de Contact</h2>
-            <form action="#" method="POST">
+            <form action="https://formspree.io/f/myzyvzzl" method="POST">
                 <div class="mb-3">
-                    <label for="name" class="form-label">Nom</label>
-                    <input type="text" class="form-control" id="name" name="name" required>
+                    <label for="name" class="form-label">Nom :</label>
+                    <input type="text" id="name" name="name" class="form-control" required>
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
+                    <label for="email" class="form-label">Email :</label>
+                    <input type="email" id="email" name="email" class="form-control" required>
                 </div>
                 <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                    <label for="message" class="form-label">Message :</label>
+                    <textarea id="message" name="message" class="form-control" rows="5" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Envoyer</button>
+                <p id="confirmationMessage" class="text-success" style="display: none;">Votre message a été envoyé avec
+                    succès. Merci de nous avoir contactés !</p>
+
             </form>
         </section>
 
