--- a/recettes/recette1.html
+++ b/recettes/recette1.html
@@ -4,22 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookies au Chocolat</title>
+    <title>Gâteau au café et aux noix</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
 </head>
 
 <body>
 
-  
-    <header class="text-center mb-4">
+
+
+    <header>
         <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
-        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 ">
-        <h1 class="">Cookies au Chocolat</h1>
-        <p class="">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
+        <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
+        <h1>Gâteau au café et aux noix</h1>
+        <p>Découvrez des recettes faciles et rapides pour tous les goûts !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
             class="form-control mb-3 w-50 mx-auto " name="query" type="text">
+        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
+            <li class="nav-item" role="presentation">
+                <a href="../index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
+                    aria-selected="true">Home</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="../html/apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
+                    aria-selected="false">Profile</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="../html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                    aria-selected="false">Contact</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="../categorie.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                    aria-selected="false">Categorie</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a href="../creationrecette/creation.html" class="nav-link rounded-5 text-light" id="contact-tab2"
+                    role="tab" aria-selected="false">Creation</a>
+            </li>
+        </ul>
     </header>
 
 
