corection code et lient

--- a/recettes/recette1.html
+++ b/recettes/recette1.html
@@ -15,32 +15,32 @@
 
 
     <header>
-        <a href="../index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
+        <a href="../index.html"><img class="iconepricibale" src="../img/chef1.png" alt="Logo du site"></a>
         <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="">
         <h1>Gâteau au café et aux noix</h1>
         <p>Découvrez des recettes faciles et rapides pour tous les goûts !</p>
         <input aria-label="Recherche" autocomplete="off" placeholder="Rechercher..."
             class="form-control mb-3 w-50 mx-auto " name="query" type="text">
-        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" id="pillNav2" role="tablist">
+        <ul class="nav nav-pills nav-fill gap-2 p-1 small rounded-5 shadow custom-nav" role="tablist">
             <li class="nav-item" role="presentation">
-                <a href="../index.html" class="nav-link active rounded-5 text-light" id="home-tab2" role="tab"
+                <a href="../index.html" class="nav-link active rounded-5 text-light" role="tab"
                     aria-selected="true">Home</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="../html/apropos.html" class="nav-link rounded-5 text-light" id="profile-tab2" role="tab"
+                <a href="../html/apropos.html" class="nav-link rounded-5 text-light" role="tab"
                     aria-selected="false">Profile</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="../html/contact.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                <a href="../html/contact.html" class="nav-link rounded-5 text-light" role="tab"
                     aria-selected="false">Contact</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="../categorie.html" class="nav-link rounded-5 text-light" id="contact-tab2" role="tab"
+                <a href="../categorie.html" class="nav-link rounded-5 text-light" role="tab"
                     aria-selected="false">Categorie</a>
             </li>
             <li class="nav-item" role="presentation">
-                <a href="../creationrecette/creation.html" class="nav-link rounded-5 text-light" id="contact-tab2"
-                    role="tab" aria-selected="false">Creation</a>
+                <a href="../creationrecette/creation.html" class="nav-link rounded-5 text-light" role="tab"
+                    aria-selected="false">Creation</a>
             </li>
         </ul>
     </header>
@@ -84,7 +84,7 @@
                     transférer sur une grille pour refroidir complètement.</li>
             </ol>
         </div>
-        </div>
+
     </section>
     <footer class="text-center py-4 ">
         <p>&copy; 2024 Tasty Tom. Tous droits réservés.</p>
