--- a/toutesRecette.html
+++ b/toutesRecette.html
@@ -15,7 +15,7 @@
         <h2>Tom Tasty</h2>
         <ul>
             <li><a href="index.html">Accueil</a></li>
-            <li class="active"><a href="allRecipe.html">Toutes les recettes</a></li>
+            <li class="active"><a href="toutesRecette.html">Toutes les recettes</a></li>
             <li><a href="categorie.html">Catégories</a></li>
             <li><a href="html/apropos.html">À propos</a></li>
             <li><a href="html/contact.html">Contact</a></li>
@@ -28,7 +28,7 @@
 
     <div class="main">
         <header class="fade-in-slide-up text-center mb-4">
-            <a href="index.html"><img class="iconepricibale" src="./img/chef (1).png" alt="Logo du site"></a>
+            <a href="index.html"><img class="iconepricibale" src="./img/chef1.png" alt="Logo du site"></a>
             <img src="./img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
             <h1 class="fade-in-slide-up">Bienvenue sur Tasty Tom !</h1>
             <p class="fade-in-slide-up">Découvrez des recettes faciles et rapides pour tous les goûts !</p>
