--- a/categorie/enter.html
+++ b/categorie/enter.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les recettes de Tasty Tom</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style2.css">
-    <link rel="shortcut icon" href="./img/chef.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style2.css">
+    <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -22,13 +22,13 @@
         </ul>
         <div class="delivery">
             <p>Create Your Recipe</p>
-            <a href="creationRecette.html">Start Here</a>
+            <a href="../creationrecette/creation.html">Start Here</a>
         </div>
     </div>
 
     <div class="main">
         <header class="fade-in-slide-up text-center mb-4">
-            <a href="index.html"><img class="iconepricibale" src="../img/chef (1).png" alt="Logo du site"></a>
+            <a href="../index.html"><img class="iconepricibale" src="../img/chef1.png" alt="Logo du site"></a>
             <img src="../img/mode-sombre.png" alt="mode sombre" id="icon" class="mb-2 fade-in">
             <h1 class="fade-in-slide-up">Plats principaux</h1>
             <p class="fade-in-slide-up">Découvrez des recettes savoureuses pour vos repas principaux !</p>
