--- a/html/apropos.html
+++ b/html/apropos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À propos - Tom Tasty</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="stylesheet" href="../css/style2.css">
     <link rel="shortcut icon" href="../img/chef.ico" type="image/x-icon">
 </head>
 
@@ -23,7 +23,7 @@
         </ul>
         <div class="delivery">
             <p>Create Your Recipe</p>
-            <a href="creationRecette.html">Start Here</a>
+            <a href="../creationrecette/creation.html">Start Here</a>
         </div>
     </div>
 
