--- a/toutesRecette.html
+++ b/toutesRecette.html
@@ -22,7 +22,7 @@
         </ul>
         <div class="delivery">
             <p>Créez votre recette</p>
-            <a href="creationRecette.html">Commencer ici</a>
+            <a href="./creationrecette/creation.html">Commencer ici</a>
         </div>
     </div>
 
