--- a/html/contact.html
+++ b/html/contact.html
@@ -36,7 +36,7 @@
 
         <section class="container mb-5">
             <h2>Formulaire de Contact</h2>
-            <!-- <form action="https://formspree.io/f/myzyvzzl" method="POST"> -->
+            <form action="https://formspree.io/f/xgvebzba" method="POST">
                 <div class="mb-3">
                     <label for="name" class="form-label">Nom :</label>
                     <input type="text" id="name" name="name" class="form-control" required>
